# pytroll-product-filter

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
examples/: product_filter_config.yaml  product_filter_config_ears_ascat.yaml_template
product_filter/: __init__.py  definitions.py  main.py  product_filter_runner.py  version.py
pytroll_product_filter/: __init__.py  argparse_wrapper.py  constants.py  definitions.py  main.py  product_filter_runner.py
